--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header > h1 {
     font-family: var(--fonte-destaque);
     color: white;
     font-size: 3em;
-    margin-bottom: 20px;
+    padding-bottom: 30px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.182);
 }
 
